# RaspberryPiDesk-pico

./: .clang-format  .gitignore  CMakeLists.txt  README.md
doc/: Communication with microcontroller.md  IBIS.md  Microcontroller.md  ReadMe.md  openocd programming.md
doc/diagrams/: Serial communcation.puml
include/: I_module.hpp
lib/: .gitmodules  CMakeLists.txt
lib/Raspberry-Pi-Pico-LCD/: CMakeLists.txt  Readme.md
lib/Raspberry-Pi-Pico-LCD/example/: CMakeLists.txt  main.cpp
lib/Raspberry-Pi-Pico-LCD/include/LcdLib/: LCDbase.h  LCDgeneric.h  LcdHardwareGpio.h  LcdHardwareI2c.h  LcdHardwareInterface.h
lib/Raspberry-Pi-Pico-LCD/src/: LCDbase.cpp  LCDgeneric.cpp  LcdHardwareGpio.cpp  LcdHardwareI2c.cpp
modules/: CMakeLists.txt
modules/busDeskBasic/: BusDeskBasic.cpp  BusDeskBasic.h  CMakeLists.txt
src/: ConfigStorage.cpp  ConfigStorage.h  DashboardMain.cpp  DashboardMain.h  DashboardMenu.cpp  DashboardMenu.h  constFunctions.h  declarations.hpp  i2cFunctions.cpp  i2cFunctions.h  main.cpp  mainFunctions.h  tusb_config.h
src/i2c_modules/: UniversalBusDesk.cpp  UniversalBusDesk.hpp  UniversalTramDesk.cpp  UniversalTramDesk.h  adjuster.cpp  adjuster.h
src/modes/deskDeck/: declarations.h  deskDeckMode.cpp  deskDeckMode.h
src/modes/gamePadMode/: GamePadMode.cpp  GamePadMode.h
src/modes/testMode/: TestMode.cpp  TestMode.h
src/usb/: usbFunctions.cpp  usbFunctions.h  usbFunctionsOld.h  usbMode.hpp  usb_descriptors.cpp
